# Slime

./: CMakeLists.txt  Makefile  README.md  SYNTAX_GUIDE.md  baseline.smeh  benchmark_comprehensive.sme  bytecode.cpp  bytecode.h  gc_test.sme  gc_value.h  main.sme  simple_gc_test.sme  simple_interpreter.cpp  slime_benchmark.cpp  slime_gc.h  test.sme  test_gc.cpp  value.h
slime_gc/: Cargo.toml
slime_gc/src/: lib.rs
